tests/unit-fail-compilation/j036a.c
#include <limits.h>
int main(void) {
      (0 + INT_MIN) % -1;
      return 0;
}

